--- a/task_manager/templates/index.html
+++ b/task_manager/templates/index.html
@@ -3,5 +3,5 @@
 {% get_current_language as LANGUAGE_CODE %}
 
 {% block content %}
-<h1>{% trans "Hello, World!" %}</h1>
+<h1>{% trans "Привет от Хекслета!" %}</h1>
 {% endblock %}
