--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand" href="index">{% trans "Task Manager" %}</a>
+        <a class="navbar-brand" href="{% url 'index' %}">{% trans "Task Manager" %}</a>
         <ul class="navbar-nav d-flex flex-row justify-content-evenly flex-grow-1">
             <ul class="navbar-nav d-flex flex-row justify-content-evenly flex-grow-1">
                 {% if user.is_authenticated %}
